src/client/css/style.css
body {
    margin: 0;
    padding: 0;
    min-width: 1024px;
    min-height: 50px;
    color: #F5F2FF;
}


header {
    width: 100%;
    height: 50px;

}

.allWidth {
    min-width: 1024px;
    width: 100%;

}
#centralDiv {
    background-color: #1E3D5C;
    width: 100%;
    
}


.dropdown-menu:nth-child(n)  {
    background-color: #222; 
    color: #9d9d9d;    
}


.dropdown-menu:nth-child(n) a{
    color: #9d9d9d;
}

.hdButton {
    color: #9d9d9d;
}

.hdButton:hover{
    color:black;
}

#hdButton8 {
    postion:absolute; 
    top:-275px; 
    left:15px;
    width: 160px;
    color: #9d9d9d;
}

#hdButton7 {
    postion:absolute; 
    top:-235px; 
    right: 90px;
    width: 105px;
}

#hdButton6 {
    postion:absolute; 
    top:-195px; 
    right:160px;
    width: 70px;
}

#hdButton5 {
    postion:absolute; 
    top:-155px; 
    right:300px;
    width: 140px;
}

#hdButton4 {
    postion:absolute; 
    top:-115px; 
    right:400px;
    width: 100px;
    
}

#hdButton3 {
    postion:absolute; 
    top:-75px; 
    right:530px;
    width: 130px;
}

#hdButton2 {
    postion:absolute; 
    top:-35px; 
    right:640px;
    width: 110px;
}

#hdButton1 {
    postion:absolute; 
    top:5px; 
    right:730px;
    width: 90px;

}


.centralText {
    padding-top: 1%;
    padding-left: 5%;
    padding-right: 5%;
    
}


#leftHomeText {
    text-align: right;
    padding-left: 12%;
    padding-top: 3%;
}

#centerHomeText {
    text-align: center;
    padding-top: 3%;
}



#rights {
    position: relative;
    top: 30px;
    left: 50%;
}

footer {
    padding-left: 5px;
    background-color: #1E3D5C;
    margin-top: -20px;
    height: 100px;
    font-size: 10px;
    
}

footer:nth-child(n) p{
    position: relative;
    top: 55px;

